--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
-POSTGRES_PASSWORD=
-POSTGRES_USER=postgres
+POSTGRES_PASSWORD=""
+POSTGRES_USER="postgres"
+PG_URL=""
 
-RABBITMQ_URL="amqp://guest:guest@rabbitmq:5672/"
+RABBITMQ_URL=""
 
 HASH_SECRET="allbyk123_asd"
 TOKEN_MANAGER_SECRET="dasdsa123_ads"
 
 SMTP_FROM=""
-SMTP_PASS=""
+SMTP_PASSWORD=""
 SMTP_SERVER=""
+
