add example to env

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-POSTGRES_PASSWORD=""
+POSTGRES_PASSWORD="111"
 POSTGRES_USER="postgres"
-PG_URL=""
+PG_URL="postgres://postgres:111@postgres:5432/task-traker"
 
-RABBITMQ_URL=""
+RABBITMQ_URL="amqp://guest:guest@rabbitmq:5672/"
 
 HASH_SECRET="allbyk123_asd"
 TOKEN_MANAGER_SECRET="dasdsa123_ads"
